# scha-256

./: .gitignore  Cargo.toml  LICENSE
engine/: Cargo.toml
engine/src/: board.rs  chessmatch.rs  decision.rs  lib.rs  list.rs  moves.rs  score.rs  threat.rs
src/: board.rs  check.rs  list.rs  main.rs  moves.rs  threat.rs  web.rs
ui/: Cargo.toml
ui/src/: error.rs  main.rs  server.rs
ui/src/templates/: 404.html  500.html  base.html  chessboard.html  index.html  mod.rs  promote.html
