[package]
name = "schach"
version = "0.1.0"
authors = ["NatrixAeria <upezu@student.kit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = 0
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"

[dependencies]
