[workspace]
members = [
    "engine",
    "ui",
]

[profile.dev]
opt-level = 1
debug = 2
debug-assertions = true
overflow-checks = true
lto = "off"
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = 0
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[profile.release.build-override]
opt-level = 3
